home work 7 part 2

--- a/css/common.css
+++ b/css/common.css
@@ -131,3 +131,185 @@ h1 {
   color: #2e2f42;
   margin-left: 24px;
 }
+
+/* //====================/Task 3========================//
+//====================Task 4 ======================//  */
+
+.login-form {
+  border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 256px;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 0;
+}
+
+.login-form label {
+  width: 360px;
+  height: 72px;
+  margin-bottom: 0;
+}
+
+.login-form input {
+  margin-left: 0;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  height: 40px;
+  width: 360px;
+}
+
+.login-form input:hover {
+  border: 1px solid #000;
+}
+
+.login-form input:active {
+  border: 1px solid #808080;
+}
+
+.login-form button {
+  border-radius: 8px;
+  border-color: transparent;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+button:hover {
+  background-color: #6c8cff;
+}
+
+/* //====================/Task 4 ========================//
+//====================Task 5 ======================//  */
+
+.widget {
+  border-radius: 8px;
+  padding: 100px 88px;
+  width: 345px;
+  height: 280px;
+  background: #fff;
+}
+
+.change-color {
+  border-radius: 8px;
+  border-color: transparent;
+  padding: 8px 16px;
+  width: 148px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.widget p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+/* //====================/Task 5 ========================//
+//====================Task 6 ======================//  */
+
+ #controls {
+  border-radius: 8px;
+  padding: 32px;
+  width: 586px;
+  height: 104px;
+  background: #f6f6fe;
+  margin-bottom: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 16px;
+} 
+
+ #controls input {
+  border: 1px solid #808080;
+  border-radius: 8px;
+  padding: 8px;
+  width: 150px;
+  height: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  text-align: center;
+} 
+
+ #controls button[data-create] {
+  border-radius: 8px;
+  border: transparent;
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+} 
+
+ #controls button[data-destroy] {
+  border-radius: 8px;
+  border: transparent;
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  background: #ff4e4e;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+} 
+
+#boxes {
+  border-radius: 8px;
+  padding: 32px;
+  width: 486px;
+  background: #f6f6fe;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 15px;
+}
+
+#controls button:first-of-type:hover {
+
+  background-color: #6c8cff;
+}
+
+#controls button:last-of-type {
+
+  background-color: #ff4e4e;
+}
+
+#controls button:last-of-type:hover {
+
+  background-color:#ff7070;
+} 
