--- a/css/common.css
+++ b/css/common.css
@@ -111,6 +111,8 @@ img {
 //====================Task 3 ======================//  */
 
 input {
+  border: 1px solid #808080;
+  border-radius: 4px;
   width: 360px;
   height: 40px;
   margin-left: 24px;
@@ -120,6 +122,7 @@ input {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #2e2f42;
+  padding-left: 16px;
 }
 
 h1 {
